# invenio-sitemap

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.tx/: config
docs/: conf.py
invenio_sitemap/: __init__.py  cache.py  config.py  ext.py  sitemap.py  tasks.py  utils.py  views.py
tests/: __init__.py  conftest.py  fake_sitemap_sections.py  test_cache.py  test_invenio_sitemap.py  test_sitemap.py  test_sitemap_index.py  test_sitemap_root.py
