# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 CERN.
# Copyright (C) 2025 Northwestern University.
#
# invenio-sitemap is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-sitemap
version = attr: invenio_sitemap.__version__
description = Sitemap indices and sitemaps for InvenioRDM
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm sitemap
license = MIT
author = Northwestern University
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-sitemap
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    # Commentary: What is the practice to follow for dependencies?
    # I am following the approach of: if use it directly, list it directly
    # but there was also bundling dependencies at some point
    # (1 dependency controlling a number of others so that dependencies across modules are always compatible)
    # (but then those would become bottleneck / single point of failure and would still need to be compatible btw each other...)
    # (I will align to whatever is the wider project's practice on this)
    arrow>=0.17.0
    invenio-base>=2.1.0,<3.0.0
    invenio-cache>=2.0.0,<3.0.0
    invenio-celery>=2.0.0,<3.0.0

[options.extras_require]
tests =
    invenio-app>=2.1.0,<3.0.0
    invenio-db[postgresql]>=2.0.0,<3.0.0
    invenio-search[opensearch2]>=3.0.0,<4.0.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.2.0,<4.0.0
    sphinx>=4.5.0
    xmlschema>=3.4.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    invenio_sitemap = invenio_sitemap:InvenioSitemap
invenio_base.blueprints =
    invenio_sitemap = invenio_sitemap.views:blueprint
invenio_celery.tasks =
    invenio_sitemap = invenio_sitemap.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_sitemap --cov-report=term-missing
testpaths = docs tests invenio_sitemap

[compile_catalog]
directory = invenio_sitemap/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Northwestern University
msgid_bugs_address = DL_FSM_GDS@e.northwestern.edu
mapping-file = babel.ini
output-file = invenio_sitemap/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_sitemap/translations/messages.pot
output-dir = invenio_sitemap/translations/

[update_catalog]
input-file = invenio_sitemap/translations/messages.pot
output-dir = invenio_sitemap/translations/
